# Vulkyrie

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-all.bat  build-all.sh
Assets/Shaders/: Compile_Shaders.sh  test.frag  test.vert  vert.spv
Engine/: CMakeLists.txt
Engine/Include/Application/: Application.h
Engine/Include/Renderers/: RendererType.h
Engine/Src/: Defines.h  Entry.cpp  StatusCode.h  Utilities.h
Engine/Src/Core/Application/: ApplicationManager.cpp  ApplicationManager.h
Engine/Src/Core/Clock/: Clock.cpp  Clock.h
Engine/Src/Core/Event/: Event.h
Engine/Src/Core/Event/Application/: WindowCloseEvent.h
Engine/Src/Core/Event/Enums/: ListenerType.h  SenderType.h
Engine/Src/Core/Event/Keyboard/: KeyEvent.h
Engine/Src/Core/Event/Mouse/: MouseButtonEvent.h  MouseMovedEvent.h  MouseScrolledEvent.h
Engine/Src/Core/Event/Registrar/: EventSystemManager.cpp  RegisteredEvent.h
Engine/Src/Core/Input/: MouseButton.h
Engine/Src/Core/Logger/: Asserts.h  LogLevel.h  Logger.cpp  Logger.h
Engine/Src/Core/Platform/: Platform.h  PlatformLinux.cpp
Engine/Src/Core/Renderers/: RendererClient.h
Engine/Src/Core/Renderers/DiretX/: DirectXRenderer.cpp  DirectXRenderer.h
Engine/Src/Core/Renderers/OpenGL/: OpenGLRenderer.cpp
Engine/Src/Core/Renderers/Vulkan/: QueueFamilyInfo.h  VulkanDevice.h  VulkanRenderer.h  VulkanSwapchain.h
Engine/Src/Platform/: LinuxPlatform.cpp  LinuxPlatform.h  Platform.h  PlatformWindows.cpp  PlatformWindows.h
Engine/Src/Renderers/: Renderer.h  RendererClient.cpp  RendererClient.h
Engine/Src/Renderers/DiretX/: DirectXRenderer.cpp  DirectXRenderer.h
Engine/Src/Renderers/OpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.h
Engine/Src/Renderers/Vulkan/: DeviceRequirements.h  ImageInfo.h  PhysicalDeviceInfo.h  QueueFamilyInfo.h  VulkanImage.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapchain.h  VulkanSwapchainSupportInfo.h
Sandbox/: CMakeLists.txt
Sandbox/Src/: Entry.cpp  SandboxApp.h
engine/: CMakeLists.txt  build.bat  build.sh
engine/Include/: Vulkyrie.h
engine/src/: Entry.cpp  defines.h  entry.h  game_types.h
engine/src/containers/: darray.c  darray.h
engine/src/core/: application.c  application.h  asserts.h  clock.c  clock.h  event.c  event.h  input.c  input.h  logger.c  logger.h  vmemory.c  vmemory.h  vstring.c  vstring.h
engine/src/core/Application/: ApplicationManager.cpp
engine/src/core/Clock/: Clock.cpp
engine/src/core/Input/: Key.h
engine/src/core/Logger/: Logger.h
engine/src/core/Renderers/: Renderer.h  RendererClient.cpp
engine/src/platform/: platform.h  platform_linux.c  platform_win32.c
engine/src/renderer/: renderer_backend.c  renderer_backend.h  renderer_frontend.c  renderer_frontend.h  renderer_types.inl
engine/src/renderer/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_device.c  vulkan_device.h  vulkan_platform.h  (+2 more)
mugration/Vulkyrie/: build_all.sh
mugration/Vulkyrie/engine/: build.sh
mugration/Vulkyrie/testbed/: build.sh
testbed/: build.bat  build.sh
testbed/src/: entry.c  game.c  game.h
(+22 files in other folders)
